[package]
name = "imei"
version = "1.0.2"
authors = ["Grant Handy <grantshandy@gmail.com>"]
description = "An IMEI number validator"
repository = "https://github.com/grantshandy/imei"
documentation = "https://docs.rs/imei"
license = "MIT"
readme = "README.md"
exclude = ["target", "Cargo.lock"]
keywords = ["imei", "luhn", "phone", "mobile", "no_std"]
edition = "2021"

[dev-dependencies]
chrono = "0.4"

[features]
default = ["std"]
std = []
