[package]
name = "imei"
version = "1.1.0"
authors = ["Grant Handy <grantshandy@proton.me>"]
description = "An IMEI number validator"
repository = "https://github.com/grantshandy/imei"
documentation = "https://docs.rs/imei"
license = "MIT"
readme = "README.md"
exclude = ["target", "Cargo.lock"]
keywords = ["imei", "luhn", "phone", "mobile", "no_std"]
edition = "2021"

[dependencies]
serde = { version = "1.0.158", features = ["derive"], optional = true }

[dev-dependencies]
chrono = "0.4"
serde_json = "1.0.94"

[features]
default = ["std", "serde"]
std = []
serde = ["dep:serde"]
