[package]
name = "imei"
version = "1.1.1"
authors = ["Grant Handy <granthandy@proton.me>"]
description = "An IMEI number validator"
repository = "https://github.com/grantshandy/imei"
documentation = "https://docs.rs/imei"
license = "MIT"
readme = "README.md"
exclude = ["target", "Cargo.lock"]
keywords = ["imei", "luhn", "phone", "mobile", "no_std"]
categories = ["No standard library", "Algorithms"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
utoipa = { version = "3.3.0", optional = true }
serde_json = { version = "1.0", default-features = false, optional = true }

[dev-dependencies]
chrono = "0.4"
serde_json = "1.0"

[features]
default = ["std", "serde", "openapi"]
std = []
serde = ["dep:serde"]
openapi = ["dep:utoipa", "dep:serde_json"]
